--- a/k8s-configs/ping-cloud/base/pingaccess/cluster/kustomization.yaml
+++ b/k8s-configs/ping-cloud/base/pingaccess/cluster/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
 - configmap.yaml
 - hpa.yaml
 - secret.yaml
+- storage.yaml
+- backup.yaml
 - ingress.yaml
 - service.yaml
 - statefulset.yaml
