--- a/k8s-configs/ping-cloud/base/pingaccess/cluster/statefulset.yaml
+++ b/k8s-configs/ping-cloud/base/pingaccess/cluster/statefulset.yaml
@@ -70,9 +70,8 @@ spec:
         - name: pingaccess-license
           mountPath: /opt/in/instance/conf/pingaccess.lic
           subPath: pingaccess.lic
-        - name: pingaccess-jwk
-          mountPath: /opt/in/instance/conf/pa.jwk
-          subPath: pa.jwk
+        - name: out-dir
+          mountPath: /opt/out
         readinessProbe:
           exec:
             command: [ liveness.sh ]
@@ -91,6 +90,8 @@ spec:
           value: CLUSTERED_CONSOLE
         - name: HTTPS_PORT
           value: "9090"
+        - name: K8S_STATEFUL_SET_SERVICE_NAME_PINGACCESS_ADMIN
+          value: $(K8S_STATEFUL_SET_SERVICE_NAME_PINGACCESS_ADMIN)
         - name: INITIAL_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -131,11 +132,9 @@ spec:
           secretName: pingaccess-passwords
           optional: true
           defaultMode: 0400
-      - name: pingaccess-jwk
-        secret:
-          secretName: pingaccess-jwk
-          optional: true
-          defaultMode: 0400
+      - name: out-dir
+        persistentVolumeClaim:
+          claimName: pingaccess-admin-backup-pvc
 
 ---
 
@@ -212,9 +211,6 @@ spec:
         - name: pingaccess-license
           mountPath: /opt/in/instance/conf/pingaccess.lic
           subPath: pingaccess.lic
-        - name: pingaccess-jwk
-          mountPath: /opt/in/instance/conf/pa.jwk
-          subPath: pa.jwk
         - name: pingaccess-pre-stop
           mountPath: /opt/staging/pre-stop.sh
           subPath: pre-stop.sh
@@ -281,11 +277,6 @@ spec:
       - name: pingaccess-passwords
         secret:
           secretName: pingaccess-passwords
-          optional: true
-          defaultMode: 0400
-      - name: pingaccess-jwk
-        secret:
-          secretName: pingaccess-jwk
           optional: true
           defaultMode: 0400
       - name: pingaccess-pre-stop
