--- a/k8s-configs/ping-cloud/base/pingdirectory/backup.yaml
+++ b/k8s-configs/ping-cloud/base/pingdirectory/backup.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: pingdirectory-backup
+  name: ds-backup
 spec:
   ttlSecondsAfterFinished: 0
   backoffLimit: 5
@@ -12,7 +12,7 @@ spec:
       serviceAccount: ping-serviceaccount
       restartPolicy: Never
       containers:
-      - name: pingdirectory-backup
+      - name: ds-backup
         # FIXME: switch to stable image before GA
         image: pingidentity/pingdirectory:8.0.0.0-alpine-edge
         command:
@@ -43,4 +43,4 @@ spec:
           defaultMode: 0555
       - name: backup-volume
         persistentVolumeClaim:
-          claimName: pingdirectory-backup-pvc
+          claimName: pd-backup-pvc
