--- a/k8s-configs/ping-cloud/base/pingdirectory/configmap.yaml
+++ b/k8s-configs/ping-cloud/base/pingdirectory/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pingdirectory-init
+  name: ds-init
 data:
   init.sh: |-
     #!/bin/sh -x
@@ -44,7 +44,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pingdirectory-post-start
+  name: ds-post-start
 data:
   80-post-start.sh: |-
     #!/bin/sh -x
@@ -140,7 +140,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pingdirectory-ready
+  name: ds-ready
 data:
   readiness.sh: |-
     #!/bin/sh -x
@@ -159,7 +159,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pingdirectory-pre-stop
+  name: ds-pre-stop
 data:
   pre-stop.sh: |-
     #!/bin/sh -x
