--- a/k8s-configs/ping-cloud/base/pingdirectory/statefulset.yaml
+++ b/k8s-configs/ping-cloud/base/pingdirectory/statefulset.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: pingdirectory
+  name: ds
 spec:
   serviceName: pingdirectory
   replicas: 1
@@ -40,7 +40,7 @@ spec:
               topologyKey: "failure-domain.beta.kubernetes.io/zone"
       terminationGracePeriodSeconds: 300
       initContainers:
-      - name: pingdirectory-init
+      - name: ds-init
         # FIXME: switch to same user as app
         securityContext:
           runAsNonRoot: false
@@ -63,11 +63,11 @@ spec:
         - name: known-hosts-config
           mountPath: /known_hosts
           subPath: known_hosts
-        - name: pingdirectory-init
+        - name: ds-init
           mountPath: /init.sh
           subPath: init.sh
       containers:
-      - name: pingdirectory
+      - name: ds
         # FIXME: switch to stable image before GA
         image: pingidentity/pingdirectory:8.0.0.0-alpine-edge
         imagePullPolicy: Always
@@ -115,13 +115,13 @@ spec:
         - name: pingdirectory-license
           mountPath: /opt/in/instance/PingDirectory.lic
           subPath: PingDirectory.lic
-        - name: pingdirectory-ready
+        - name: ds-ready
           mountPath: /opt/staging/readiness.sh
           subPath: readiness.sh
-        - name: pingdirectory-pre-stop
+        - name: ds-pre-stop
           mountPath: /opt/staging/pre-stop.sh
           subPath: pre-stop.sh
-        - name: pingdirectory-post-start
+        - name: ds-post-start
           mountPath: /opt/staging/hooks/80-post-start.sh
           subPath: 80-post-start.sh
         readinessProbe:
@@ -146,21 +146,21 @@ spec:
         emptyDir: {}
       - name: data-dir
         emptyDir: {}
-      - name: pingdirectory-init
+      - name: ds-init
         configMap:
-          name: pingdirectory-init
+          name: ds-init
           defaultMode: 0555
-      - name: pingdirectory-pre-stop
+      - name: ds-pre-stop
         configMap:
-          name: pingdirectory-pre-stop
+          name: ds-pre-stop
           defaultMode: 0555
-      - name: pingdirectory-ready
+      - name: ds-ready
         configMap:
-          name: pingdirectory-ready
+          name: ds-ready
           defaultMode: 0555
-      - name: pingdirectory-post-start
+      - name: ds-post-start
         configMap:
-          name: pingdirectory-post-start
+          name: ds-post-start
           defaultMode: 0555
       - name: ssh-id-key-secret
         secret:
