--- a/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
@@ -6,7 +6,7 @@ kind: Deployment
 metadata:
   name: pingfederate
   labels:
-    cluster: pingfederate-cluster
+    cluster: pf-cluster
     role: pingfederate-engine
 spec:
   replicas: 1
@@ -14,14 +14,14 @@ spec:
     metadata:
       name: pingfederate-engine
       labels:
-        cluster: pingfederate-cluster
+        cluster: pf-cluster
         role: pingfederate-engine
       annotations:
         lastUpdateReason: "NA"
     spec:
       serviceAccount: ping-serviceaccount
       initContainers:
-      - name: pingfederate-init
+      - name: pf-init
         # FIXME: switch to same user as app
         securityContext:
           runAsNonRoot: false
@@ -41,7 +41,7 @@ spec:
         - name: known-hosts-config
           mountPath: /known_hosts
           subPath: known_hosts
-        - name: pingfederate-init
+        - name: pf-init
           mountPath: /init.sh
           subPath: init.sh
         env:
@@ -96,6 +96,7 @@ spec:
           failureThreshold: 10
         ports:
         - containerPort: 9031
+          name: pf-runtime
         envFrom:
         - configMapRef:
             name: pingfederate-environment-variables
@@ -107,9 +108,9 @@ spec:
         emptyDir: {}
       - name: data-dir
         emptyDir: {}
-      - name: pingfederate-init
+      - name: pf-init
         configMap:
-          name: pingfederate-init
+          name: pf-init
           defaultMode: 0555
       - name: ssh-id-key-secret
         secret:
