--- a/k8s-configs/ping-cloud/base/pingfederate/standalone/deployment.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/standalone/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       serviceAccount: ping-serviceaccount
       initContainers:
-      - name: pingfederate-init
+      - name: pf-init
         # FIXME: switch to same user as app
         securityContext:
           runAsNonRoot: false
@@ -34,7 +34,7 @@ spec:
         - name: known-hosts-config
           mountPath: /known_hosts
           subPath: known_hosts
-        - name: pingfederate-init
+        - name: pf-init
           mountPath: /init.sh
           subPath: init.sh
         envFrom:
@@ -77,7 +77,9 @@ spec:
           failureThreshold: 10
         ports:
         - containerPort: 9999
+          name: pf-admin
         - containerPort: 9031
+          name: pf-runtime
         envFrom:
         - configMapRef:
             name: pingfederate-environment-variables
@@ -89,9 +91,9 @@ spec:
         emptyDir: {}
       - name: data-dir
         emptyDir: {}
-      - name: pingfederate-init
+      - name: pf-init
         configMap:
-          name: pingfederate-init
+          name: pf-init
           defaultMode: 0555
       - name: ssh-id-key-secret
         secret:
