--- a/k8s-configs/ping-cloud/base/pingaccess/cluster/statefulset.yaml
+++ b/k8s-configs/ping-cloud/base/pingaccess/cluster/statefulset.yaml
@@ -5,6 +5,7 @@ kind: StatefulSet
 metadata:
   name: pingaccess-admin
   labels:
+    cluster: pingaccess-cluster
     role: pingaccess-admin
 spec:
   replicas: 1
@@ -16,6 +17,7 @@ spec:
     metadata:
       name: pingaccess-admin
       labels:
+        cluster: pingaccess-cluster
         role: pingaccess-admin
       annotations:
         lastUpdateReason: "NA"
@@ -146,6 +148,7 @@ kind: StatefulSet
 metadata:
   name: pingaccess
   labels:
+    cluster: pingaccess-cluster
     role: pingaccess-engine
 spec:
   replicas: 1
@@ -155,6 +158,7 @@ spec:
     metadata:
       name: pingaccess-engine
       labels:
+        cluster: pingaccess-cluster
         role: pingaccess-engine
       annotations:
         lastUpdateReason: "NA"
@@ -186,7 +190,7 @@ spec:
         env:
         # PA engine must wait for the PA admin to be ready
         - name: WAIT_FOR_SERVICES
-          value: pingaccess
+          value: pingaccess-admin
         envFrom:
         - configMapRef:
             name: pingaccess-environment-variables
