--- a/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
@@ -1,27 +1,26 @@
-#
-# This defines the pingfederate runtime engine  deployment.
-#
+# This defines the pingfederate admin deployment.
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pingfederate
+  name: pingfederate-admin
   labels:
-    cluster: pf-cluster
-    role: pingfederate-engine
+    cluster: pingfederate-cluster
+    role: pingfederate-admin
 spec:
   replicas: 1
   template:
     metadata:
-      name: pingfederate-engine
+      name: pingfederate-admin
       labels:
-        cluster: pf-cluster
-        role: pingfederate-engine
+        cluster: pingfederate-cluster
+        role: pingfederate-admin
       annotations:
         lastUpdateReason: "NA"
     spec:
       serviceAccount: ping-serviceaccount
       initContainers:
-      - name: pf-init
+      - name: pingfederate-init
         # FIXME: switch to same user as app
         securityContext:
           runAsNonRoot: false
@@ -41,7 +40,148 @@ spec:
         - name: known-hosts-config
           mountPath: /known_hosts
           subPath: known_hosts
-        - name: pf-init
+        - name: pingfederate-init
+          mountPath: /init.sh
+          subPath: init.sh
+        envFrom:
+        - configMapRef:
+            name: pingfederate-environment-variables
+      containers:
+      - name: pingfederate-admin
+        # FIXME: switch to stable PF10 image before GA
+        image:  pingidentity/pingfederate:10.0.0-alpine-edge
+        imagePullPolicy: Always
+        env:
+        - name:  OPERATIONAL_MODE
+          value: CLUSTERED_CONSOLE
+        - name:  PF_DNS_PING_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: INITIAL_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: pingfederate-passwords
+              key: INITIAL_ADMIN_PASSWORD
+        envFrom:
+        - configMapRef:
+            name: pingfederate-environment-variables
+        - secretRef:
+            name: devops-secret
+            optional: true
+        resources:
+          requests:
+            memory: "2Gi"
+            cpu: "1"
+          limits:
+            memory: "2Gi"
+            cpu: "1"
+        volumeMounts:
+        # FIXME: fix home directory when containers run as non-root user
+        - name: ssh-dir
+          mountPath: /root/.ssh
+        - name: data-dir
+          mountPath: /usr/local/bin/kubectl
+          subPath: kubectl
+        - name: pingfederate-license
+          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
+          subPath: pingfederate.lic
+        - name: pingfederate-jwk
+          mountPath: /opt/in/instance/server/default/data/pf.jwk
+          subPath: pf.jwk
+        readinessProbe:
+          exec:
+            command: [ liveness.sh ]
+          periodSeconds: 30
+          failureThreshold: 10
+        livenessProbe:
+          exec:
+            command: [ liveness.sh ]
+          periodSeconds: 30
+          failureThreshold: 10
+        ports:
+        - containerPort: 9999
+      volumes:
+      - name: ssh-dir
+        emptyDir: {}
+      - name: data-dir
+        emptyDir: {}
+      - name: pingfederate-init
+        configMap:
+          name: pingfederate-init
+          defaultMode: 0555
+      - name: ssh-id-key-secret
+        secret:
+          secretName: ssh-id-key-secret
+          optional: true
+          defaultMode: 0400
+      - name: known-hosts-config
+        configMap:
+          name: known-hosts-config
+          optional: true
+          defaultMode: 0644
+      - name: pingfederate-license
+        secret:
+          secretName: pingfederate-license
+          optional: true
+          defaultMode: 0400
+      - name: pingaccess-passwords
+        secret:
+          secretName: pingaccess-passwords
+          optional: true
+          defaultMode: 0400
+      - name: pingfederate-jwk
+        secret:
+          secretName: pingfederate-jwk
+          optional: true
+          defaultMode: 0400
+
+---
+
+#
+# This defines the pingfederate runtime engine  deployment.
+#
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pingfederate
+  labels:
+    cluster: pingfederate-cluster
+    role: pingfederate-engine
+spec:
+  replicas: 1
+  template:
+    metadata:
+      name: pingfederate-engine
+      labels:
+        cluster: pingfederate-cluster
+        role: pingfederate-engine
+      annotations:
+        lastUpdateReason: "NA"
+    spec:
+      serviceAccount: ping-serviceaccount
+      initContainers:
+      - name: pingfederate-init
+        # FIXME: switch to same user as app
+        securityContext:
+          runAsNonRoot: false
+          runAsUser: 0
+        image: curlimages/curl
+        imagePullPolicy: IfNotPresent
+        command:
+        - /init.sh
+        volumeMounts:
+        - name: ssh-dir
+          mountPath: /.ssh
+        - name: data-dir
+          mountPath: /data
+        - name: ssh-id-key-secret
+          mountPath: /id_rsa
+          subPath: id_rsa
+        - name: known-hosts-config
+          mountPath: /known_hosts
+          subPath: known_hosts
+        - name: pingfederate-init
           mountPath: /init.sh
           subPath: init.sh
         env:
@@ -96,7 +236,6 @@ spec:
           failureThreshold: 10
         ports:
         - containerPort: 9031
-          name: pf-runtime
         envFrom:
         - configMapRef:
             name: pingfederate-environment-variables
@@ -108,9 +247,9 @@ spec:
         emptyDir: {}
       - name: data-dir
         emptyDir: {}
-      - name: pf-init
+      - name: pingfederate-init
         configMap:
-          name: pf-init
+          name: pingfederate-init
           defaultMode: 0555
       - name: ssh-id-key-secret
         secret:
