--- a/k8s-configs/ping-cloud/base/pingdirectory/base/service.yaml
+++ b/k8s-configs/ping-cloud/base/pingdirectory/base/service.yaml
@@ -1,5 +1,5 @@
 # Headless service that provides DNS between the pods in the pingdirectory
-# topology
+# topology, and exposes statsd metrics to prometheus
 
 apiVersion: v1
 kind: Service
@@ -11,9 +11,11 @@ spec:
   - port: 389
     name: ldap
     targetPort: ldap
-  - port: 636
+  - port: 1636
     name: ldaps
     targetPort: ldaps
+  - port: 9102
+    name: metrics
   clusterIP: None
 
 ---
