--- a/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/cluster/deployment.yaml
@@ -9,6 +9,11 @@ metadata:
     role: pingfederate-admin
 spec:
   replicas: 1
+  # Recreate strategy will force admin to completely be removed from cluster
+  # and recreate new admin upon deployment. This will avoid error of
+  # 2 admins in 1 cluster.
+  strategy:
+    type: Recreate
   template:
     metadata:
       name: pingfederate-admin
@@ -204,6 +209,11 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: INITIAL_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: pingfederate-passwords
+              key: INITIAL_ADMIN_PASSWORD
         resources:
           requests:
             memory: "2Gi"
