--- a/k8s-configs/ping-cloud/base/pingfederate/standalone/deployment.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/standalone/deployment.yaml
@@ -4,11 +4,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pingfederate
+  labels:
+    cluster: standalone
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   template:
     metadata:
       name: pingfederate
+      labels:
+        cluster: standalone
       annotations:
         lastUpdateReason: "NA"
     spec:
@@ -45,6 +51,12 @@ spec:
         # FIXME: switch to stable image before GA
         image:  pingidentity/pingfederate:10.0.0-alpine-edge
         imagePullPolicy: Always
+        env:
+        - name: INITIAL_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: pingfederate-passwords
+              key: INITIAL_ADMIN_PASSWORD
         resources:
           requests:
             memory: "2Gi"
