--- a/k8s-configs/ping-cloud/base/pingfederate/cluster/kustomization.yaml
+++ b/k8s-configs/ping-cloud/base/pingfederate/cluster/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 #- baseline-secret.yaml
 - configmap.yaml
 # FIXME: Will move periodic-backup.yaml to code-gen before kube mode 1
-# - periodic-backup.yaml
+- periodic-backup.yaml
 - deployment.yaml
 - service.yaml
 - ingress.yaml
