--- a/k8s-configs/ping-cloud/prod/small/kustomization.yaml
+++ b/k8s-configs/ping-cloud/prod/small/kustomization.yaml
@@ -9,8 +9,11 @@ commonLabels:
 resources:
 - ../../base
 - ../../base/pingdirectory/tls-tunnel
-- ../../base/pingfederate/cluster
+- ../../base/pingaccess/cluster
+- ../../base/pingfederate/aws
 
 patchesStrategicMerge:
 - pingdirectory/limits.yaml
 - pingfederate/limits.yaml
+- pingaccess/limits.yaml
+- pingaccess/admin-init-env.yaml
