--- a/k8s-configs/ping-cloud/test/kustomization.yaml
+++ b/k8s-configs/ping-cloud/test/kustomization.yaml
@@ -9,6 +9,7 @@ commonLabels:
 resources:
 - ../base
 - ../base/pingdirectory/tls-tunnel
-- ../base/pingfederate/cluster
+- ../base/pingaccess/cluster
+- ../base/pingfederate/aws
 - pingdataconsole
 - httpbin
